# task-server-rust

./: Cargo.toml  Dockerfile  Makefile  README.md
migrations/: 000001_create_user.up.sql  000002_add_tokens.up.sql  000003_create_tasks.down.sql  000003_create_tasks.up.sql
src/: config.rs  main.rs  middleware.rs
src/auth/: jwt.rs  jwt_tests.rs  mod.rs  passwords.rs  passwords_test.rs
src/config/: errors.rs  load.rs  mod.rs
src/lib/: auth.rs  config.rs  lib.rs  models.rs  repositories.rs  server.rs  utils.rs
src/lib/handlers/: task.rs  user.rs
src/lib/models/: task.rs  token_group.rs  user.rs
src/lib/repositories/: task.rs  token.rs  user.rs
src/lib/services/: task.rs  user.rs
src/lib/utils/: api_error_response.rs  clean_tokens.rs
src/routes/: tasks.rs  user.rs
src/types/: mod.rs  tasks.rs  user.rs
