[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[dependencies]
axum = "0.8.3"
tokio = { features = ["full"], version = "1.44.1" }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "fast-rng"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
